--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.saulpos.javafxcrudgenerator/com.saulpos.javafxcrudgenerator.HelloApplication
+                                com.saulpos.javafxcrudgenerator.sample.CrudGeneratorSample
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
