Adding icons to the buttons.

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>controlsfx</artifactId>
             <version>11.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx</artifactId>
+            <version>8.9</version>
+        </dependency>
 
     </dependencies>
 
