--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
     <distributionManagement>
         <repository>
-            <id>s3-release-repo</id>
-            <url>s3://saulpos-maven/releases</url>
+            <id>maven.nuvalence.repo</id>
+            <url>s3://saulpos-maven/release</url>
         </repository>
         <snapshotRepository>
-            <id>s3-snapshot-repo</id>
-            <url>s3://saulpos-maven/snapshots</url>
+            <id>maven.nuvalence.repo</id>
+            <url>s3://saulpos-maven/snapshot</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -82,11 +82,30 @@
                 <artifactId>ant-aws-maven</artifactId>
                 <version>1.10.6</version>
             </dependency>
+        <dependency>
+            <groupId>ant-contrib</groupId>
+            <artifactId>ant-contrib</artifactId>
+            <version>1.0b3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.0.Final</version>
+        </dependency>
 
     </dependencies>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>com.github.seahen</groupId>
+                <artifactId>maven-s3-wagon</artifactId>
+                <version>1.3.3</version>
+            </extension>
+        </extensions>
         <plugins>
+            <!-- This plugin is currently not being used but I will keep it -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -96,8 +115,8 @@
                         <id>deploy-artifacts</id>
                         <phase>deploy</phase>
                         <configuration>
-                            <file>${project.build.directory}/${project.build.finalName}.${project.packaging}</file>
-                            <url>http://your-s3-bucket.s3.amazonaws.com/${project.artifactId}/${project.version}/${project.build.finalName}.${project.packaging}</url>
+                            <file>target/javafx-crud-generator-1.0-SNAPSHOT.jar</file>
+                            <url>http://saulpos-maven.s3.amazonaws.com/javafx-crud-generator/1.0/javafx-crud-generator-1.0-SNAPSHOT.jar</url>
                         </configuration>
                     </execution>
                 </executions>
@@ -105,33 +124,6 @@
                     <source>19</source>
                     <target>19</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>upload-to-s3</id>
-                        <phase>deploy</phase>
-                        <configuration>
-                            <tasks>
-                                <echo message="Uploading ${project.artifactId}-${project.version}.${project.packaging} to S3..." />
-                                <s3upload
-                                        file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-                                        destbucket="saulpos-maven"
-                                        destkey="${project.artifactId}/${project.version}/${project.build.finalName}.${project.packaging}"
-                                        accesskey=""
-                                        secretkey="I will hide them because it warned me"
-                                        region="us-east-1"
-                                />
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
